# SpongbobCli-Rust

./: Cargo.toml  LICENSE  README.md
src/: check_deps.rs  main.rs
src/commands/: download.rs  list.rs  mod.rs  play.rs  rand.rs
src/utility/: mod.rs  utls.rs
